# URRobotControllerRTC

./: CMakeLists.txt  ManipulatorCommonInterface_Common_idl.py  ManipulatorCommonInterface_Common_idl_example.py  ManipulatorCommonInterface_DataTypes_idl.py  ManipulatorCommonInterface_Middle_idl.py  ManipulatorCommonInterface_Middle_idl_example.py  README.URRobotControllerRTC  README.md  RTC.xml  RobotiqGripper.py  URRobotController.py  URRobotControllerRTC.conf  URRobotControllerRTC.py  idlcompile.bat  idlcompile.sh  rtc.conf
.github/workflows/: codeql-analysis.yml
JARA_ARM/: __init__.py
JARA_ARM__POA/: __init__.py
cmake/: urrobotcontrollerrtc-config.cmake.in
cmake_modules/: FindOpenRTMPython.cmake
cpack_resources/: Description.txt  License.txt  wix.xsl.in
doc/: conf.py.in
doc/content/: index.txt  index_j.txt
idl/: CMakeLists.txt
include/: CMakeLists.txt
include/URRobotControllerRTC/: CMakeLists.txt
src/: CMakeLists.txt
test/: URRobotControllerUT.py  get_info.py  test_robot.py
tests/: get_info.py  test_component.sh  test_fakerobot.py  test_robot.py
